--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navba">
         <!-- Links -->
         <ul>
-            <li class="nav-item"> <a class="nav-link" id="span" href="#"> < Patronella /></a></li>
+            <li class="nav-item"> <a class="nav-link" id="span" href="#"> < Nela /></a></li>
             <li class="nav-item"><a class="nav-link" href="#home">HOME</a></li>
             <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
             <li class="nav-item"><a class="nav-link" href="#resume">RESUME</a></li>
@@ -29,9 +29,9 @@
     </nav>
     <section class="cont1" id="home">
       <div class="details">
-        <h1>Hi, im Patronella <span id="hand">👋</span></h1>
+        <h1>Hi, im Nela <span id="hand">👋</span></h1>
         <div class="details1">
-          <h6 class="det" id="animation">Web UI/UX | Node.js Developer</h6>
+          <h6 class="det" id="animation">Full-stack Web Developer | Blockchain Developer</h6>
         </div>
         <h5 id="home_h5">from South Africa<span id="sa">🇿🇦 </span></h5>
         <div class="butnn"><a class="nav-link" href="#contact"><button class="home_btn" type="submit">CONTACT ME</a></button></a>
@@ -43,14 +43,13 @@
       </div>
     </section>
     <section id="about">
-      <h2 class="sec2-h2">Hello, Im Patronella full-stack web developer and this is what I do on my best</h2>
+      <h2 class="sec2-h2">Hello, Im Nela full-stack web developer and this is what I do on my best</h2>
       <div class="sec2-lang">
         <ul>
           <li><i class="fab fa-html5"></i><p id="op">HTML5</p></li>
           <li><i class="fab fa-css3"></i><p id="op">CSS3</p></li>
           <li><i class="fab javascript fa-js"></i><p id="op">Javascript</p></li>
           <li><i class="fab react fa-react"></i><p id="op">React</p></li>
-          <li><i class="fab react fa-node"></i><p id="op">Node.js</p></li>
           <li><i class="fab python fa-python"></i><p id="op">Python</p></li>
           <li><i class="fab fa-cuttlefish"></i><p id="op">C-Language</p></li>
         </ul>
@@ -66,18 +65,18 @@
           <div class="edu">
             <ol>
               <li>Freecodecamp</li>
-              <li>Microverse</li>
+              <li>Consensys</li>
               <li>Ordin project</li>
             </0l>
           </div>
        </div>
        <div class="con1">
         <div class="edu1">
-          <h6>WORK</h6>
+          <h6>EXPERIENCE</h6>
         </div>
         <div class="edu">
-          <h6>Have been freelancing since 2019 to present, creating projects and teaching code</h6>
-          <h6>Am the founder of evansify.com a software development agency.</h6>
+          <h6>Have been tutor since 2015 to present, creating projects and learning to code</h6>
+          <h6>I'm the computer science student, i like to learn new things to develop new skills.</h6>
         </div>
         </div>
       </div>
@@ -155,7 +154,7 @@
       <p id="small"> ©  patronella 2022 | All rights reserved </p>
     </footer>
     <script>
-      const arrayStr = ['Back-end Developer | Node.js Developer', 'Web UI/UX Developer | React Developer', 'Dart Developer | Python Developer']
+      const arrayStr = ['Full-stack Web Developer | Blockchain Developer', 'C Developer | React Developer', 'Dart Developer | Python Developer']
 
       const animation = document.getElementById('animation')
       let i = -1
